kubernetes-debug/envoy.yml
apiVersion: v1
kind: Namespace
metadata:
 labels:
   istio-injection: enabled
 name: production
