kubernetes-debug/front-gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
   name: frontend
   namespace: production
spec:
   selector:
       istio: ingressgateway # use Istio default gateway implementation
   servers:
   - port:
       number: 80
       name: http
       protocol: HTTP
     hosts:
       - "*"
