kubernetes-debug/front-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
   name: frontend
   namespace: production
spec:
   hosts:
   - "*"
   gateways:
   - frontend
   http:
       - route:
           - destination:
               host: frontend
               port:
                   number: 80
